# gpu-search-mcp

./: .gitignore  CHANGELOG.md  Cargo.toml  PLAN_v0.1.0.md  README.md  ROADMAP.md  install.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
benchmarks/: methodology.md  run_benchmark.py
benchmarks/baselines/: csharp.json  mixed.json  python.json  typescript.json
benchmarks/fixtures/csharp/src/Auth/: JwtValidator.cs  TokenService.cs
benchmarks/fixtures/csharp/tests/Auth/: JwtValidatorTests.cs
benchmarks/fixtures/mixed/backend/: auth.py
benchmarks/fixtures/mixed/config/: auth.json
benchmarks/fixtures/mixed/frontend/: auth.ts
benchmarks/fixtures/mixed/tests/: test_auth.py
benchmarks/fixtures/python/src/auth/: jwt_validator.py  token_service.py
benchmarks/fixtures/python/tests/auth/: test_jwt_validator.py
benchmarks/fixtures/typescript/src/auth/: jwt.ts  tokenService.ts
benchmarks/fixtures/typescript/tests/auth/: jwt.test.ts
benchmarks/manifests/: csharp.json  mixed.json  python.json  typescript.json
crates/gpu-search-core/: Cargo.toml
crates/gpu-search-core/examples/: pattern_benchmark.rs
crates/gpu-search-core/src/: cache.rs  csharp_ast.rs  deps.rs  deps_tests.rs  file_discovery.rs  index_config.rs  lib.rs  line_index.rs  pattern.rs
crates/gpu-search-core/tests/: integration_parity.rs
crates/gpu-search-http/: Cargo.toml
crates/gpu-search-http/src/: dependency.rs  lib.rs  main.rs  models.rs  read.rs  search.rs  signals.rs  state.rs  system.rs  tests.rs
crates/gpu-search-http/src/tests/: dependency.rs  read.rs  search.rs  signals.rs  system.rs
crates/gpu-search-mcp/: Cargo.toml
crates/gpu-search-mcp/src/: lib.rs  main.rs  tests.rs  tools.rs
crates/gpu-search-mcp/src/tests/: dependency.rs  errors.rs  protocol.rs  read.rs  search.rs  signals.rs  status.rs
crates/gpu-search-mcp/src/tools/: common.rs  dependency.rs  read.rs  search.rs  signals.rs  status.rs
docs/: limitations.md  release-checklist.md  release-readiness.md  rust-rewrite-next.md  rust-rewrite-plan.md  signal-scan.md
docs/openapi/: gpu-search-mcp.openapi.yaml
docs/releases/: v0.1.0.md  v0.1.1.md
gpu_service/: __init__.py  ast_expand.py  bench.py  cache_manager.py  change_planner.py  device.py  git_state.py  gpu_dep_index.py  gpu_index.py  gpu_semantic_index.py  http_server.py  mcp_server.py  mcp_tools.py  quality_benchmark.py  redact.py  semantic_model_manager.py  semantic_sidecar.py  server_config.py  setup_cli.py  symbol_index.py
scripts/: package_smoke_test.py  quality_gate.py  smoke_test.py
tests/: test_cache_manager.py  test_change_planner.py  test_cli.py  test_csharp_support.py  test_device.py  test_diagnostics.py  test_http_api.py  test_index_root.py  test_openapi.py  test_packaging.py  test_quality_benchmark.py  test_quality_gate.py  test_root_isolation.py  test_security.py  test_semantic_cache.py  test_semantic_model_manager.py  test_setup_cli.py  test_signal_scan.py  test_symbol_index.py  test_thread_safety.py
