[package]
name = "gpu-search-http"
version = "0.1.0"
edition = "2024"
description = "Experimental Rust HTTP server scaffold for gpu-search-mcp"
license = "MIT"
publish = false

[dependencies]
axum = "0.8"
gpu-search-core = { path = "../gpu-search-core" }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
